# provvigioni-navision

./: .gitignore  README.MD  README.md  app.py  classificazione.py  config.py  crea_collegamento.bat  fattura.py  genera_excel.py  pyproject.toml  test_fattura.py
src/provvigioni-navision/config/: config.py
src/provvigioni-navision/main/: app.py  fattura.py  genera_excel.py
src/provvigioni_navision/config/: classificazione.py
src/provvigioni_navision/main/: app.py  fattura.py  genera_excel.py
tests/: test_fattura.py
